--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>
-        Article-one | Nikunj Dhingra
-    </title>
-</head>
+    <head>
+        <title>
+            Article-one | Nikunj Dhingra
+        </title>
+    </head>
+
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <h3>Artticle-one</h3>
+        <div>
+            5th March,2018
+        </div>
+        <div>
+            <p>
+                this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
+            </p>
+            <p>
+                    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
+            </p>
+            <p>
+                    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
+            </p>
+        </div>
+            
+    </body>
 </html>
