--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,28 +5,37 @@
             Article-one | Nikunj Dhingra
         </title>
         <meta name="viewport" content="width=device-width initial-scale=1">
+        <style>
+            #container{
+                max-width:800px;
+                margin:0 auto;
+                color:grey;
+                font-family:sans-serif;
+            }
+        </style>
     </head>
 
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr>
-        <h3>Artticle-one</h3>
-        <div>
-            5th March,2018
-        </div>
-        <div>
-            <p>
-                this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
-            </p>
-            <p>
+        <div id="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr>
+            <h3>Artticle-one</h3>
+            <div>
+                5th March,2018
+            </div>
+            <div>
+                <p>
                     this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
-            </p>
-            <p>
-                    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
-            </p>
-        </div>
-            
+                </p>
+                <p>
+                        this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
+                </p>
+                <p>
+                        this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
+                </p>
+            </div>
+        </div>    
     </body>
 </html>
