--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -9,25 +9,26 @@
     </head>
 
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr>
-        <h3>Artticle-one</h3>
-        <div>
-            5th March,2018
-        </div>
-        <div>
-            <p>
-                this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
-            </p>
-            <p>
+        <div id="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr>
+            <h3>Artticle-one</h3>
+            <div>
+                5th March,2018
+            </div>
+            <div>
+                <p>
                     this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
-            </p>
-            <p>
-                    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
-            </p>
-        </div>
-            
+                </p>
+                <p>
+                        this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
+                </p>
+                <p>
+                        this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.    this is the content for article-one.
+                </p>
+            </div>
+    </div>            
     </body>
 </html>
