--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am nikunj and this is my first webapp.
-        </div>
+        <div class="container">
+            <div class="center">
+                <img id="madi" src="https://pbs.twimg.com/profile_images/961280307424047104/QW4nyyvM_400x400.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <hr>
+            <h3>Personal</h3>
+            <div>
+                Hi!, my name is nikunj dhingra.
+            </div>
+            <hr>
+             <h3>Professional</h3>
+            <div>
+                I am a student at bvcoe.
+            </div>
+           <hr>
+           <div class="footer">
+               
+           </div>
+        </div>    
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
