--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,14 @@
            <hr>
            <div class="footer">
              This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.  
+             <br>
+             <input type="text" id="name" placeholder="name">
+             <input type="submit" value="Submit">
+             <ul>
+                 <li>Name1</li>
+                 <li>Name2</li>
+                 <li>Name3</li>
+             </ul>
            </div>
         </div>    
         <script type="text/javascript" src="/ui/main.js">
