--- a/ui/index.html
+++ b/ui/index.html
@@ -22,11 +22,9 @@
              This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times.  
              <hr>
              <input type="text" id="name" placeholder="name">
-             <input type="submit" value="Submit">
-             <ul>
-                 <li>Name1</li>
-                 <li>Name2</li>
-                 <li>Name3</li>
+             <input type="submit" value="Submit" id="submit_btn">
+             <ul id="namelist">
+                 
              </ul>
            </div>
         </div>    
